
sox-14.0.2	2008-TBD
----------

File formats:

  o No change

Effects:

  o Added effect to splice together audio sections.  (robs)
  o Added remix effect (complements the mixer effect).  (robs)
  o Added norm (normalise) effect.  (robs)

Other new features:

  o Command line support for multiple file comments.  (robs)
  o Added soxi utility to extract/display file header fields.  (robs)

Bug fixes:

  o Fix [1864216] comments mangled when writing ogg-vorbis.  (robs)

Internal improvements:

  o Use FORTIFY_SOURCE with gcc.  (robs)

Feature deprecation & removal:

  Deprec-  Feature    [O(ption)]                           Removal
  ated in  [F(ormat)] [E(ffect)]   Replacement             due in
  -------  ----------------------  ----------------------  -------
  13.0.0   O -e                    -n                      14.0.2
  13.0.0   O -b/-w/-l/-d           -1/-2/-4/-8             14.0.2
  13.0.0   E avg, pick             mixer                   14.0.2
  13.0.0   E highp, lowp           highpass -1, lowpass -1 14.0.2
  13.0.0   E mask                  dither                  14.0.2
  13.0.0   E rate                  ~= resample             14.0.2
  13.0.0   E vibro                 ~= tremolo              14.0.2
  13.0.0   F auto                  Becomes internal only   14.0.2
  14.0.0   E stretch               ~= tempo                2008-09-11
  14.0.0   E pitch                 ~= key                  2008-09-11
  14.0.2   F wve (native)          wve (libsndfile)        14.0.2 + 1 year
  14.0.2   F flac: libFLAC 1.1.1   libFLAC > 1.1.1         14.0.2 + 6 months


sox-14.0.1	2008-01-29
----------

  File formats:

  o Added support for non-standard, non-WAVE_FORMAT_EXTENSIBLE
    (esp. 24-bit) PCM wav (see wavpcm in soxformat.7 for details).  (robs)

  Effects:

  o Reimplemented reverb to be similar to freeverb.  (robs)

  Bug fixes:

  o Fix Sndtool read error causing noise at start.  (Reynir Stefánsson)