@@ -1,0 +1,12 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: SoX
+Description: Audio file format and effects library
+Version: @VERSION@
+URL: http://sox.sourceforge.net
+Libs: -L${libdir} -lsox -lsfx
+Libs.private: @LIBS@
+Cflags: -I${includedir}/sox
